vendor/cargo/parameterized-macro-2.0.0/tests/fail/no_argument.stderr
error: custom attribute panicked
 --> $DIR/no_argument.rs:3:1
  |
3 | #[parameterized(x = { 0, 1 })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: parameterized-macro: error: Unable to find value for parameter 'y' (case #0)
